# CommentUpdater

./: .gitignore  .gitmodules  Makefile  README.md  main.py  pyproject.toml
config/: config.yml
data/: test.json
data/results/: result-20240125_111818.jsonl
jupyter/: evaluation.ipynb  main.ipynb  preprocess.ipynb  rag.ipynb  rouge.ipynb  sampling.ipynb  statictics.ipynb
modelfiles/: llama3-original-Modelfile  llama3-temp-0.5-Modelfile  llama3-temp-1.0-Modelfile  llama3-temp-1.5-Modelfile
prompts/: v1.txt  v2.txt
result/: result-20240328_152509.jsonl
result/baseline/: CUP_first1000.jsonl  FracoUpdater.jsonl  HebCup.jsonl  NNUpdater.jsonl
result/candidates/: candidates-20240328_154312.jsonl  candidates-20240328_154522.jsonl  candidates-20240328_154708.jsonl  candidates-20240401_212856.jsonl  candidates-20240408_134253.jsonl  candidates-20240408_135757.jsonl  candidates-20240408_151702.jsonl  candidates-20240408_191600.jsonl  candidates-20240408_192303.jsonl  candidates-20240409_151023.jsonl  candidates-20240409_152727.jsonl  candidates-20240409_172221.jsonl  candidates-20240425_161220.jsonl  candidates-dolphin-mistral-latest-1000-20240408_194308.jsonl  candidates-llama2-7b-1000-20240408_173014.jsonl  candidates-llama3-instruct-1-20240427_103835.jsonl  candidates-llama3-temp1.0-instruct-1000-20240427_105849.jsonl  candidates-llama3-temp1.5-instruct-1000-20240427_135945.jsonl  candidates-mistral-instruct-1000-20240409_002542.jsonl  candidates-openhermes-7b-v2.5-1000-20240409_152922.jsonl
result/evaluation/: chosen_generated.jsonl  chosen_sample_ids.json
src/: algo.py  db.py  eval.py  llm.py  main.py  sorter.py  test.py
