[tool.poetry]
name = "commentupdater"
version = "0.1.0"
description = ""
authors = ["Ziyue Tan <201250093@smail.nju.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.16"
python-dotenv = "^1.0.0"
jupyter = "^1.0.0"
jsonlines = "^4.0.0"
rouge = "^1.0.1"
scikit-learn = "^1.4.0"
pyyaml = "^6.0.1"
beautifulsoup4 = "^4.12.3"
faiss-cpu = "^1.7.4"
chromadb = "^0.5.0"
langchainhub = "^0.1.14"
matplotlib = "^3.8.3"
javalang = "^0.13.0"
openai = "^1.13.3"
httpx = {extras = ["socks"], version = "^0.27.0"}
nltk = "^3.8.1"
rich = "^13.7.1"
jq = "^1.7.0"
py-markdown-table = "^0.4.0"
pandas = "^2.2.1"
tabulate = "^0.9.0"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
